# projects

./: .gitignore  CLAUDE.md  GEMINI.md  MFE_SETUP_GUIDE.md  README.md  docker-compose.yml
afroj/: Resume_latest_text.txt  Suhail_ReactJS_Python_Resume.docx  Trending_Skills_Today.docx  Trending_Skills_Today.md  make_docx.ipynb
angular/: README.md  package-lock.json  package.json
attendance/: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  npmrc  package.json  tailwind.config.js  vite.config.js
claims/: .dockerignore  .gitignore  .npmrc  Dockerfile  loader.css  package.json  requirements.txt  vite.config.js  (+1 more)
vani-setu/ml-gateway/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.runtime.txt  requirements.txt  sbom-python.json
vani-setu/ml-gateway/app/: config.py  dependencies.py  main.py
vani-setu/ml-gateway/app/adapters/: base.py  bhashini.py  indictrans2.py  sarvam.py  sarvam_ws.py  whisper.py
vani-setu/ml-gateway/app/models/: schemas.py
vani-setu/ml-gateway/app/routers/: asr.py  health.py  speech.py  speech_to_speech.py  translate.py
vani-setu/ml-gateway/app/services/: artifact_store.py  callbacks.py  fallback_chain.py  provider_health.py  provider_selector.py  recent_calls.py  speech_processing.py
vani-setu/ml-gateway/scripts/: check-sarvam-key.py
vani-setu/ml-gateway/tests/: test_bhashini_adapter.py  test_callbacks.py  test_check_sarvam_key.py  test_fallback_chain.py  test_nmt_routes.py  test_provider_selector.py  test_recent_calls.py  test_sarvam_adapter.py  test_speech_routes.py  test_tijori_whisper_fallback.py
(+1379 files in other folders)
