[tool.poetry]
name = "ml-gateway"
version = "0.1.0"
description = "FastAPI gateway for ASR and translation providers used by Vani Setu."
authors = ["SDS <dev@sds.local>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.136.1"
uvicorn = { extras = ["standard"], version = "^0.34.2" }
httpx = "^0.28.1"
sarvamai = "*"
certifi = ">=2024.07.04"
urllib3 = ">=2.2.2"
tornado = ">=6.5.5"
Brotli = ">=1.2.0"
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"
starlette = "^0.49.3"
transformers = "4.57.3"
torch = "2.9.1"
sentencepiece = "0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
respx = "^0.22.0"
ruff = "^0.11.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
